recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: '(' expected but '{' found.
{(steps == 0)}
^